2023-03-29:
  - Add support for 'ucminf' as inner optimisation method.

2023-01-11:
  - Added 'rebase' function (and method) to change the baseline category of a
    fitted model. (That is adjust the coefficients without the need of refitting.)

2023-01-08:
  - Bugfix in 'predict.mmblogit' that caused an error if 'conditional=FALSE'
    was set.

2023-01-06:
  - More compact output of mblogit models random effects and diagonal covariance
    matrix. 

2023-01-05:
  - Added support for alternative optimizers to be used in the inner iterations 
    of MQL/PQL

2022-10-23:
  - Refactored MQL/PQL algorithm: Eliminated redundant code and adapted it to
    both 'nlm' and 'nlminb'

2022-10-16:
  - Fixed bug in MQL/PQL-objective function that led to false non-convergence and
    bias in variance parameter estimates

2022-10-12:
  - Support for starting values in random effects models
  - Support for restriction on random effects variances in multinomial baseline
    logit models

2022-10-09:
  - Improve handling of boundary values and singular information matrices

2022-10-07:
  - Remove spurious messages about missing starting values

2022-05-21:
  - Add checks of 'control=' argument of 'mclogit()' and 'mblogit()'.

2022-04-13:
  - Fixed bug in 'blockMatrix' and make it check for argument validity

2022-04-11:
  - Hotfix of prediction method

2022-04-10:
  - Fix handling of singular initial covariance matrices in PQLMQL_innerFit
  - Issue a warning if models with random effects are compared using anova
  - Fix predict methods for mmclogit models
  - Handle DOIs in documentation as required by new guidelines

2022-01-16:
  - Fix prediction with complicated terms in the model
  - Add some more demos

2021-08-13:
  - predict.mmclogit: create W-Matrix only when really needed

2021-07-13:
  - Include variance parameters in the computation of degrees of freedom

2021-06-03:
  - Be less zealous about group-level covariates constant in some choice sets.

2021-05-30: