@@ -25,6 +25,7 @@
       \item Singular initial covariance matrices no longer cause errors.
       \item A warning about unreliable results is issued if
       \code{anova()} is applied to models with random effects.
+      \item Estimating of overdispersion with group data now works.
     }
   }
   \subsection{IMPROVEMENTS}{
